test/arrays/johnk/associative/badKeyType.good
badKeyType.chpl:2: error: Associative array key element 1 expected to be of type string but is of type int(64)
